<resources>
    <string name="app_name">Test for Delete</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add first item</string>
    <string name="Add_string">Enter Grocery item</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save_title">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="text_sure">Are you sure</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_activity_list_activiy">ListActiviy</string>
</resources>
